--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-ts-template",
-  "version": "1.1",
+  "version": "1.0.0",
   "description": "A template for building static React apps in Typescript.",
   "private": true,
   "scripts": {
     "start": "webpack serve --config ./bundler/client/webpack.dev.js",
     "build:client": "webpack --config ./bundler/client/webpack.prod.js",
     "build:server": "webpack --config ./bundler/server/webpack.prod.js",
+    "build:all": "npm-run-all --sequential build:client build:server",
     "server": "node build/server.js"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
